@@ -1,7 +1,13 @@
 Revision history for Perl extension Net::SSLeay.
 
-?????
+??????
     Fixed some typos. Patched by Neil Bowers.
+    SSLeay.pm convenience functions now call Net::SSLeay::initialize that
+    initializes the SSL library at most once. Added requirement for
+    multi-threaded apps that use get_https and similar SSLeay convenience functions to
+    call Net::SSLeay::initialize before threading starts. This is due to the
+    fact that the SSL initilization functions are non-reentrant.
+    
 
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
